--- a/index.html
+++ b/index.html
@@ -628,7 +628,9 @@
                             onmouseover="onMouseOver('github')"
                             onmouseout="onMouseOut('github')">
                             <td class="social">
-                                <a class="social-icon icon-to-heading" href="#">
+                                <a class="social-icon icon-to-heading"
+                                   href="https://github.com/A-Nikhil"
+                                   target="_blank">
                                     <i class="fab fa-github" id="github"></i></a>
                             </td>
                             <td class="social-link">
