--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <a class="navbar-brand" href="index.html">Nikhil Anand</a>
             </nav>
             <div class="row">
-                <div class="col-1"></div>
-                <div class="col-10">
+                <div class="col-sm-0 col-md-1 col-lg-1"></div>
+                <div class="col-sm-12 col-md-10 col-lg-10">
                     <div class="navigation-pills">
                         <ul class="nav nav-pills nav-justified" id="pills-tab" role="tablist">
                             <li class="nav-item">
@@ -77,7 +77,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-1"></div>
+                <div class="col-sm-0 col-md-1 col-lg-1"></div>
             </div>
         </div>
         <div class="col-sm-0 col-md-1 col-lg-2"></div>
