--- a/index.html
+++ b/index.html
@@ -683,6 +683,11 @@
                                             A Movie Recommendation website with HTML, CSS and JS frontend <br/>
                                             Supported by a NodeJS backend <br/>
                                             and a <b>MongoDB</b> database <br/>
+                                            <a href="https://github.com/A-Nikhil/myIMDB"
+                                               target="_blank">
+                                                <i class="fab fa-github"></i>
+                                                Link to Github Repo
+                                            </a>
                                         </p>
                                     </div>
                                 </div>
@@ -725,6 +730,11 @@
                                             Had a <b>Mouse graphics</b> too. <br/>
                                             Converted the entire OS as an ISO file which worked without any errors in
                                             Oracle Virtual Box <br/>
+                                            <a href="https://github.com/A-Nikhil/XenonOS"
+                                               target="_blank">
+                                                <i class="fab fa-github"></i>
+                                                Link to Github Repo
+                                            </a>
                                         </p>
                                     </div>
                                 </div>
@@ -764,6 +774,11 @@
                                             images. <br/>
                                             Made a Java software that performs pixel-by-pixel steganography. <br/>
                                             The software was presented with a <b>Java FX frontend</b>. <br/>
+                                            <a href="https://github.com/A-Nikhil/Encrypto"
+                                               target="_blank">
+                                                <i class="fab fa-github"></i>
+                                                Link to Github Repo
+                                            </a>
                                         </p>
                                     </div>
                                 </div>
@@ -802,10 +817,14 @@
                                             Parallelization of the International Data Encryption Algorithm. <br/>
                                             Coded in Java (JDK 12). <br/>
                                             Takes in a message with a random 128 bit key, encrypts the message. Performs
-                                            key reversal and
-                                            decryption
-                                            of the message. <br/>
+                                            key reversal and decryption of the message. <br/>
                                             Used <b>ExecutorService</b> to parallelize the algorithm with a Thread Pool.
+                                            <br/>
+                                            <a href="https://github.com/A-Nikhil/EncryptionParallel"
+                                               target="_blank">
+                                                <i class="fab fa-github"></i>
+                                                Link to Github Repo
+                                            </a>
                                         </p>
                                     </div>
                                 </div>
@@ -850,6 +869,11 @@
                                             <br/>
                                             Dynamic Web Pages were made as <b>JSP</b>. <br/>
                                             The central database was <b>SQLite</b>. <br/>
+                                            <a href="https://github.com/A-Nikhil/Online-Retail-Store-Demo"
+                                               target="_blank">
+                                                <i class="fab fa-github"></i>
+                                                Link to Github Repo
+                                            </a>
                                         </p>
                                     </div>
                                 </div>
@@ -890,7 +914,11 @@
                                             weight
                                             of<i>x</i> <br/>
                                             Optimized to find the least value of <i>n</i>. <br/>
-                                            <a href="#">Link to Paper</a>
+                                            <a href="https://github.com/A-Nikhil/1D-Bin-Packing-using-Firefly"
+                                               target="_blank">
+                                                <i class="fab fa-github"></i>
+                                                Link to Github Repo
+                                            </a>
                                         </p>
                                     </div>
                                 </div>
@@ -898,9 +926,7 @@
 
                             <hr>
 
-                            <!-- Financier
-
-                            <hr> -->
+                            <!-- Financier -->
                         </div>
                     </div>
                 </div>
@@ -930,9 +956,11 @@
                                                         onmouseover="onMouseOver('facebook')"
                                                         onmouseout="onMouseOut('facebook')">
                                                         <td class="social">
-                                                            <a class="social-icon icon-to-heading" href="#"><i
-                                                                    class="fab fa-facebook-square"
-                                                                    id="facebook"></i></a>
+                                                            <a class="social-icon icon-to-heading"
+                                                               href="https://www.facebook.com/anandni/"
+                                                               target="_blank">
+                                                                <i class="fab fa-facebook-square" id="facebook"></i>
+                                                            </a>
                                                         </td>
                                                         <td class="social-link">
                                                             <div class="social-link-anchor-div">
@@ -949,8 +977,11 @@
                                                         onmouseover="onMouseOver('instagram')"
                                                         onmouseout="onMouseOut('instagram')">
                                                         <td class="social">
-                                                            <a class="social-icon"><i class="fab fa-instagram"
-                                                                                      id="instagram"></i></a>
+                                                            <a class="social-icon"
+                                                               href="https://www.instagram.com/nikhil.__.anand/"
+                                                               target="_blank">
+                                                                <i class="fab fa-instagram" id="instagram"></i>
+                                                            </a>
                                                         </td>
                                                         <td class="social-link">
                                                             <div class="social-link-anchor-div">
@@ -967,7 +998,9 @@
                                                         onmouseover="onMouseOver('twitter')"
                                                         onmouseout="onMouseOut('twitter')">
                                                         <td class="social">
-                                                            <a class="social-icon" href="#">
+                                                            <a class="social-icon"
+                                                               href="https://twitter.com/anand_nikhil01"
+                                                               target="_blank">
                                                                 <i class="fab fa-twitter" id="twitter"></i>
                                                             </a>
                                                         </td>
@@ -986,12 +1019,14 @@
                                                         onmouseover="onMouseOver('linkedin')"
                                                         onmouseout="onMouseOut('linkedin')">
                                                         <td class="social">
-                                                            <a class="social-icon" href="#"><i class="fab fa-linkedin"
-                                                                                               id="linkedin"></i></a>
+                                                            <a class="social-icon"
+                                                               href="https://www.linkedin.com/in/a-nikhil/"
+                                                               target="_blank">
+                                                                <i class="fab fa-linkedin" id="linkedin"></i>
+                                                            </a>
                                                         </td>
                                                         <td class="social-link">
                                                             <div class="social-link-anchor-div">
-
                                                                 <a class="social-link-anchor" id="linkedin-link"
                                                                    href="https://www.linkedin.com/in/a-nikhil/"
                                                                    target="_blank">
@@ -1011,14 +1046,15 @@
                                                         onmouseover="onMouseOver('gmail')"
                                                         onmouseout="onMouseOut('gmail')">
                                                         <td class="social">
-                                                            <a class="social-icon" href="#"><i class="far fa-envelope"
-                                                                                               id="gmail"></i></a>
+                                                            <a class="social-icon"
+                                                               href="mailto:nikhilanand1006@gmail.com" target="_blank">
+                                                                <i class="far fa-envelope" id="gmail"></i></a>
                                                         </td>
                                                         <td class="social-link">
                                                             <div class="social-link-anchor-div">
                                                                 <a class="social-link-anchor" id="gmail-link"
                                                                    href="mailto:nikhilanand1006@gmail.com">
-                                                                    nikhilanand@gmail.com
+                                                                    nikhilanand1006@gmail.com
                                                                 </a>
                                                             </div>
                                                         </td>
@@ -1028,8 +1064,10 @@
                                                         onmouseover="onMouseOver('quora')"
                                                         onmouseout="onMouseOut('quora')">
                                                         <td class="social">
-                                                            <a class="social-icon" href="#"><i class="fab fa-quora"
-                                                                                               id="quora"></i></a>
+                                                            <a class="social-icon"
+                                                               href="https://www.quora.com/profile/Nikhil-Anand-112"
+                                                               target="_blank">
+                                                                <i class="fab fa-quora" id="quora"></i></a>
                                                         </td>
                                                         <td class="social-link">
                                                             <div class="social-link-anchor-div">
@@ -1066,8 +1104,11 @@
                                                         onmouseover="onMouseOver('medium')"
                                                         onmouseout="onMouseOut('medium')">
                                                         <td class="social">
-                                                            <a class="social-icon" href="#"><i class="fab fa-medium"
-                                                                                               id="medium"></i></a>
+                                                            <a class="social-icon"
+                                                               href="https://medium.com/@nikhilanand1006"
+                                                               target="_blank">
+                                                                <i class="fab fa-medium" id="medium"></i>
+                                                            </a>
                                                         </td>
                                                         <td class="social-link">
                                                             <div class="social-link-anchor-div">
