--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                                                             data-toggle="collapse"
                                                             data-target="#project-collapseFour" title="Click to expand"
                                                             aria-expanded="true" aria-controls="project-collapseFour">
-                                                        IDEA Algorithm Parallelization
+                                                        IDEA Algorithm
                                                     </button>
                                                 </a>
                                                 <p class="small skill-info">
