--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                                 <p class="title-body">
                                     I am <span id="nikhil-anand-jumbotron">Nikhil Anand</span> <br/>
                                     <u class="dashed-hello"> I love computers and the science that drives it. </u><br/>
-                                    Welcome to my <b>world</b>, say <b>Hello</b> <br/><br/></p>
+                                    Welcome to my <b>world</b>, say <b>Hello</b>
+                                    <br/><br/>
+                                </p>
                                 <blockquote class="blockquote text-left font-italic">
                                     <p class="mb-0">There are 10 types of people in this world, those who understand
                                         binary and those
@@ -128,15 +130,17 @@
                 <div class="col-sm-0 col-md-1 col-lg-2"></div>
                 <div class="col-sm-12 col-md-10 col-lg-8">
                     <p class="display-6" style="font-weight: bold">
-                        About Me
+                        <u>About Me</u>
                     </p>
                     <p class="about">
-                        I am a CS undergrad studying in Vellore Institute of Technology, Vellore, India. <br/>
-                        I am originally from Jamshedpur, India. <br/>
-                        I like building things on software because hardware is a much lot of work <br/>
-                        <b>Data Science</b> is what I am exploring and <b>Java</b> is my language of preference <br/>
-                        When I am not programming, I am watching documentaries on Youtube. <br/>
-                        Activities I do, that does not involve a computer screen, are reading, thinking and making plans
+                        I am a <b>CS undergrad</b> studying in Vellore Institute of Technology, Vellore, India. <br/>
+                        I am originally from <b>Jamshedpur, India</b>. <br/>
+                        I like <b>building things on software</b> because it involves a nice cup of coffee and good
+                        music. <br/>
+                        <b>Data Science</b> is what I am exploring and <b>Java</b> is my language of preference. <br/>
+                        When I am not programming, I am <b>watching documentaries on Youtube</b>. <br/>
+                        Activities I do, that do not involve a computer screen, are <b>reading novels</b> and
+                        <b>writing science fiction</b>.
                         <br/>
                     </p>
                 </div>
@@ -191,6 +195,8 @@
                     </div>
 
                     <div class="tab-content" id="pills-tabContentInner">
+
+                        <!-- Coding Skills -->
                         <div class="tab-pane fade show active" id="pills-coding" role="tabpanel"
                              aria-labelledby="pills-coding-tab">
 
@@ -522,6 +528,7 @@
 
                         </div>
 
+                        <!-- Languages -->
                         <div class="tab-pane fade" id="pills-languages" role="tabpanel"
                              aria-labelledby="pills-languages-tab">
                             <!-- Languages Here -->
@@ -586,10 +593,10 @@
                                                             German
                                                         </a>
                                                         <p class="small skill-info">
-                                                            Elementary - Reading, Spoken and Written
+                                                            Elementary - can read, write and speak
                                                         </p>
                                                         <p class="small skill-info">
-                                                            Grundstufe - Lesen, Sprechen und Schreiben
+                                                            Grundstufe - kann lesen, schreiben und sprechen
                                                         </p>
                                                     </div>
                                                     <div class="col-6 collapse-button">
@@ -1157,7 +1164,7 @@
             <div class="col-sm-0 col-md-1 col-lg-2"></div>
             <div class="col-sm-12 col-md-10 col-lg-8 font-weight-bold footer-display">
                 Nikhil Anand &#169;
-                <a onload="setDate()" id="date-and-time">April, 2020</a>
+                <a id="date-and-time">April, 2020</a>
             </div>
             <div class="col-sm-0 col-md-1 col-lg-2"></div>
         </div>
@@ -1265,6 +1272,8 @@
         icon.style.color = "#6b6e73";
         link.style.color = "#6b6e73";
     }
+
+    setDate();
 </script>
 
 </body>
