Changed Profile Picture

--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                         <div class="row">
                             <div class="col-4">
                                 <div class="box">
-                                    <img class="profile" src="img/myImage2.jpg" alt="my picture here">
+                                    <img class="profile" src="img/profile-image.jpg" alt="my picture here">
                                 </div>
                             </div>
                             <div class="col-8">
                                 <p class="title-body">
-                                    <span class="well-hello-there">Well, hello there !!</span> <br/>
+                                    <span class="well-hello-there">Well, hello there !! 👋🏻</span> <br/>
                                 </p>
                                 <p class="title-body">
                                     I am <span id="nikhil-anand-jumbotron">Nikhil Anand</span> <br/>
