--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
 
 <!-- Resume -->
 <div id="mySidenav" class="sidenav">
-    <a href="resume/NikhilAnandResume.pdf" target="_blank" id="about">
+    <a href="resume/resume.pdf" target="_blank" id="about">
         Resume
         <div class="icon-to-heading"></div>
         <div class="icon-to-heading"></div>
