--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
     </div>
 </div>
 
+<!-- Resume -->
+<div id="mySidenav" class="sidenav">
+    <a href="resume/resume.pdf" target="_blank">
+        Resume
+        <div class="icon-to-heading"></div>
+        <div class="icon-to-heading"></div>
+        <div class="icon-to-heading"></div>
+        <div class="icon-to-heading"></div>
+        <i class="fas fa-file-download"></i>
+    </a>
+</div>
+
 <div class="tab-content" id="pills-tabContent">
 
     <!-- Home -->
@@ -1142,18 +1154,6 @@
         </div>
     </div>
 
-</div>
-
-<!-- Resume -->
-<div id="mySidenav" class="sidenav">
-    <a href="resume/resume.pdf" target="_blank" id="about">
-        Resume
-        <div class="icon-to-heading"></div>
-        <div class="icon-to-heading"></div>
-        <div class="icon-to-heading"></div>
-        <div class="icon-to-heading"></div>
-        <i class="fas fa-file-download"></i>
-    </a>
 </div>
 
 <!-- footer -->
