--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
                 <div class="col-sm-0 col-md-1 col-lg-2"></div>
                 <div class="col-sm-12 col-md-10 col-lg-8">
                     <div class="breaker"></div>
-                    <!-- fixme changes -->
                     <div class="row">
                         <div class="col-4"></div>
                         <div class="col-4">
@@ -215,28 +214,28 @@
                             <!-- Skills here -->
                             <div class="skill-body">
                                 <div class="accordion" id="accordionExample">
+
+                                    <!-- Java -->
                                     <div class="card">
                                         <div class="card-header" id="headingOne">
                                             <div class="container-fluid">
                                                 <div class="row">
                                                     <div class="col-6">
                                                         <a class="skill-title">
-                                                            <i class="fab fa-java"></i>
-                                                            <div class="icon-to-heading"></div>
-                                                            Java
+                                                            <button class="btn btn-link collapsed skill-title"
+                                                                    type="button"
+                                                                    data-toggle="collapse"
+                                                                    data-target="#collapseOne" title="Click to expand"
+                                                                    aria-expanded="true" aria-controls="collapseOne">
+                                                                <i class="fab fa-java"></i>
+                                                                <div class="icon-to-heading"></div>
+                                                                Java
+                                                            </button>
                                                         </a>
                                                         <p class="small skill-info">
                                                             A concurrent, class-based, statically typed object-oriented
                                                             language.
                                                         </p>
-                                                    </div>
-                                                    <div class="col-6 collapse-button">
-                                                        <button class="btn btn-link collapsed" type="button"
-                                                                data-toggle="collapse"
-                                                                data-target="#collapseOne" title="Click to expand"
-                                                                aria-expanded="true" aria-controls="collapseOne">
-                                                            <i class="fas fa-plus"></i>
-                                                        </button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -279,21 +278,19 @@
                                                 <div class="row">
                                                     <div class="col-6">
                                                         <a class="skill-title">
-                                                            <i class="fab fa-python"></i>
-                                                            <div class="icon-to-heading"></div>
-                                                            Python
+                                                            <button class="btn btn-link collapsed skill-title"
+                                                                    type="button"
+                                                                    data-toggle="collapse"
+                                                                    data-target="#collapseTwo" title="Click to expand"
+                                                                    aria-expanded="false" aria-controls="collapseTwo">
+                                                                <i class="fab fa-python"></i>
+                                                                <div class="icon-to-heading"></div>
+                                                                Python
+                                                            </button>
                                                         </a>
                                                         <p class="small skill-info">
                                                             A dynamic language emphasizing readability
                                                         </p>
-                                                    </div>
-                                                    <div class="col-6 collapse-button">
-                                                        <button class="btn btn-link collapsed" type="button"
-                                                                data-toggle="collapse"
-                                                                data-target="#collapseTwo" title="Click to expand"
-                                                                aria-expanded="false" aria-controls="collapseTwo">
-                                                            <i class="fas fa-plus"></i>
-                                                        </button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -334,21 +331,19 @@
                                                 <div class="row">
                                                     <div class="col-6">
                                                         <a class="skill-title">
-                                                            <i class="fab fa-cuttlefish"></i>
-                                                            <div class="icon-to-heading"></div>
-                                                            C / C++
+                                                            <button class="btn btn-link collapsed skill-title"
+                                                                    type="button"
+                                                                    data-toggle="collapse"
+                                                                    data-target="#collapseThree" title="Click to expand"
+                                                                    aria-expanded="false" aria-controls="collapseThree">
+                                                                <i class="fab fa-cuttlefish"></i>
+                                                                <div class="icon-to-heading"></div>
+                                                                C / C++
+                                                            </button>
                                                         </a>
                                                         <p class="small skill-info">
                                                             A general purpose system programming language.
                                                         </p>
-                                                    </div>
-                                                    <div class="col-6 collapse-button">
-                                                        <button class="btn btn-link collapsed" type="button"
-                                                                data-toggle="collapse"
-                                                                data-target="#collapseThree" title="Click to expand"
-                                                                aria-expanded="false" aria-controls="collapseThree">
-                                                            <i class="fas fa-plus"></i>
-                                                        </button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -386,21 +381,19 @@
                                                 <div class="row">
                                                     <div class="col-6">
                                                         <a class="skill-title">
-                                                            <i class="fas fa-file-code"></i>
-                                                            <div class="icon-to-heading"></div>
-                                                            HTML, CSS and JavaScript
+                                                            <button class="btn btn-link collapsed skill-title"
+                                                                    type="button"
+                                                                    data-toggle="collapse"
+                                                                    data-target="#collapseFour" title="Click to expand"
+                                                                    aria-expanded="false" aria-controls="collapseFour">
+                                                                <i class="fas fa-file-code"></i>
+                                                                <div class="icon-to-heading"></div>
+                                                                HTML, CSS and JavaScript
+                                                            </button>
                                                         </a>
                                                         <p class="small skill-info">
                                                             The languages that make up the web.
                                                         </p>
-                                                    </div>
-                                                    <div class="col-6 collapse-button">
-                                                        <button class="btn btn-link collapsed" type="button"
-                                                                data-toggle="collapse"
-                                                                data-target="#collapseFour" title="Click to expand"
-                                                                aria-expanded="false" aria-controls="collapseFour">
-                                                            <i class="fas fa-plus"></i>
-                                                        </button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -439,21 +432,19 @@
                                                 <div class="row">
                                                     <div class="col-6">
                                                         <a class="skill-title">
-                                                            <i class="fab fa-php"></i>
-                                                            <div class="icon-to-heading"></div>
-                                                            PHP
+                                                            <button class="btn btn-link collapsed skill-title"
+                                                                    type="button"
+                                                                    data-toggle="collapse"
+                                                                    data-target="#collapseFive" title="Click to expand"
+                                                                    aria-expanded="false" aria-controls="collapseFive">
+                                                                <i class="fab fa-php"></i>
+                                                                <div class="icon-to-heading"></div>
+                                                                PHP
+                                                            </button>
                                                         </a>
                                                         <p class="small skill-info">
                                                             A popular general-purpose scripting language.
                                                         </p>
-                                                    </div>
-                                                    <div class="col-6 collapse-button">
-                                                        <button class="btn btn-link collapsed" type="button"
-                                                                data-toggle="collapse"
-                                                                data-target="#collapseFive" title="Click to expand"
-                                                                aria-expanded="false" aria-controls="collapseFive">
-                                                            <i class="fas fa-plus"></i>
-                                                        </button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -492,21 +483,18 @@
                                                 <div class="row">
                                                     <div class="col-6">
                                                         <a class="skill-title">
-                                                            <i class="fas fa-database"></i>
-                                                            <div class="icon-to-heading"></div>
-                                                            SQL
+                                                            <button class="btn btn-link collapsed skill-title" type="button"
+                                                                    data-toggle="collapse"
+                                                                    data-target="#collapseSix" title="Click to expand"
+                                                                    aria-expanded="false" aria-controls="collapseSix">
+                                                                <i class="fas fa-database"></i>
+                                                                <div class="icon-to-heading"></div>
+                                                                SQL
+                                                            </button>
                                                         </a>
                                                         <p class="small skill-info">
                                                             Language of the relational databases.
                                                         </p>
-                                                    </div>
-                                                    <div class="col-6 collapse-button">
-                                                        <button class="btn btn-link collapsed" type="button"
-                                                                data-toggle="collapse"
-                                                                data-target="#collapseSix" title="Click to expand"
-                                                                aria-expanded="false" aria-controls="collapseSix">
-                                                            <i class="fas fa-plus"></i>
-                                                        </button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -621,10 +609,8 @@
 
                                 </div>
                             </div>
-                            <!-- Languages Here -->
                         </div>
                     </div>
-                    <!-- fixme Skills here -->
 
                 </div>
 
@@ -1094,26 +1080,6 @@
                                                                    href="https://www.quora.com/profile/Nikhil-Anand-112"
                                                                    target="_blank">
                                                                     Nikhil Anand
-                                                                </a>
-                                                            </div>
-                                                        </td>
-                                                    </tr>
-                                                    <!-- Wordpress -->
-                                                    <!-- fixme ADD LINK  -->
-                                                    <tr title="Blogs" class="social-row"
-                                                        onmouseover="onMouseOver('wordpress')"
-                                                        onmouseout="onMouseOut('wordpress')"
-                                                        hidden>
-                                                        <td class="social">
-                                                            <a class="social-icon" href="#"><i class="fab fa-wordpress"
-                                                                                               id="wordpress"></i></a>
-                                                        </td>
-                                                        <td class="social-link">
-                                                            <div class="social-link-anchor-div">
-                                                                <a class="social-link-anchor" href="#"
-                                                                   target="_blank"
-                                                                   id="wordpress-link">
-                                                                    @nikhil.__.anand
                                                                 </a>
                                                             </div>
                                                         </td>
