--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <!-- Resume -->
 <div id="mySidenav" class="sidenav">
-    <a href="resume/resume.pdf" target="_blank">
+    <a href="resume/NikhilAnandResume.pdf" target="_blank">
         Resume
         <div class="icon-to-heading"></div>
         <div class="icon-to-heading"></div>
